linux/driver/tmp/3.13.0-45-generic/clflush_cache_range.log
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/clflush_cache_range.E.c -E /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/clflush_cache_range.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/clflush_cache_range.c:6:27: error: extra tokens at end of #ifdef directive [-Werror]
 #ifdef LINUX_VERSION_CODE = KERNEL_VERSION(2,6,18)
                           ^
cc1: all warnings being treated as errors
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/clflush_cache_range.o -c /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/clflush_cache_range.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/clflush_cache_range.c:6:27: error: extra tokens at end of #ifdef directive [-Werror]
 #ifdef LINUX_VERSION_CODE = KERNEL_VERSION(2,6,18)
                           ^
cc1: all warnings being treated as errors
